python-compiler/tests/snapshots/lib__precedence__left_to_right_same_precedence.snap
---
source: tests/precedence.rs
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"

@int_format_string = private unnamed_addr constant [4 x i8] c"%d\0A\00", align 1
@float_format_string = private unnamed_addr constant [4 x i8] c"%f\0A\00", align 1
@string_format_string = private unnamed_addr constant [4 x i8] c"%s\0A\00", align 1

define i32 @main() {
entry:
  br i1 false, label %str_concat, label %arithmetic

str_concat:                                       ; preds = %entry
  %lhs_len = call i64 @strlen(ptr inttoptr (i64 5 to ptr))
  %rhs_len = call i64 @strlen(ptr inttoptr (i64 3 to ptr))
  %total_len = add i64 %lhs_len, %rhs_len
  %total_size = add i64 %total_len, 1
  %malloc_concat = call ptr @malloc(i64 %total_size)
  %memcpy_lhs = call ptr @memcpy(ptr %malloc_concat, ptr inttoptr (i64 5 to ptr), i64 %lhs_len)
  %rhs_dest = getelementptr i8, ptr %malloc_concat, i64 %lhs_len
  %rhs_copy_len = add i64 %rhs_len, 1
  %memcpy_rhs = call ptr @memcpy(ptr %rhs_dest, ptr inttoptr (i64 3 to ptr), i64 %rhs_copy_len)
  %ptr_to_int = ptrtoint ptr %malloc_concat to i64
  %ptr_payload = and i64 %ptr_to_int, 281474976710655
  %pyobject_string = or i64 9221683186994511872, %ptr_payload
  br label %add_merge

arithmetic:                                       ; preds = %entry
  br label %add_merge

add_merge:                                        ; preds = %arithmetic, %str_concat
  %add_result = phi i64 [ %pyobject_string, %str_concat ], [ 9221120237041090568, %arithmetic ]
  %check_qnan = and i64 %add_result, 9221120237041090560
  %is_float = icmp ne i64 %check_qnan, 9221120237041090560
  %tag_bits = and i64 %add_result, 1970324836974592
  %tag = lshr i64 %tag_bits, 48
  %is_bool = icmp eq i64 %tag, 1
  %is_string = icmp eq i64 %tag, 2
  %is_list = icmp eq i64 %tag, 3
  %map_bool = select i1 %is_bool, i64 2, i64 %tag
  %map_string = select i1 %is_string, i64 3, i64 %map_bool
  %map_list = select i1 %is_list, i64 4, i64 %map_string
  %final_tag = select i1 %is_float, i64 1, i64 %map_list
  %check_qnan1 = and i64 %add_result, 9221120237041090560
  %is_float2 = icmp ne i64 %check_qnan1, 9221120237041090560
  %i64_to_f64 = bitcast i64 %add_result to double
  %extract_payload = and i64 %add_result, 281474976710655
  %sign_bit = lshr i64 %extract_payload, 47
  %is_negative = icmp eq i64 %sign_bit, 1
  %sign_extend = or i64 %extract_payload, -281474976710656
  %signed_payload = select i1 %is_negative, i64 %sign_extend, i64 %extract_payload
  %payload_to_f64 = sitofp i64 %signed_payload to double
  %final_payload = select i1 %is_float2, double %i64_to_f64, double %payload_to_f64
  %is_int = icmp eq i64 %final_tag, 0
  %is_string3 = icmp eq i64 %final_tag, 3
  br i1 %is_string3, label %print_string, label %check_int

check_int:                                        ; preds = %add_merge
  br i1 %is_int, label %print_int, label %print_float

print_int:                                        ; preds = %check_int
  %to_int = fptosi double %final_payload to i64
  %printf_int = call i32 (ptr, ...) @printf(ptr @int_format_string, i64 %to_int)
  br label %print_end

print_float:                                      ; preds = %check_int
  %printf_float = call i32 (ptr, ...) @printf(ptr @float_format_string, double %final_payload)
  br label %print_end

print_string:                                     ; preds = %add_merge
  %extract_ptr_payload = and i64 %add_result, 281474976710655
  %payload_to_ptr = inttoptr i64 %extract_ptr_payload to ptr
  %printf_string = call i32 (ptr, ...) @printf(ptr @string_format_string, ptr %payload_to_ptr)
  br label %print_end

print_end:                                        ; preds = %print_string, %print_float, %print_int
  ret i32 0
}

declare i64 @strlen(ptr)

declare ptr @malloc(i64)

declare ptr @memcpy(ptr, ptr, i64)

declare i32 @printf(ptr, ...)
